force-app/main/default/objects/RelationBuildlv__c/RelationBuildlv__c.object-meta.xml
<CustomObject>
    <label>関係構築lv</label>
    <nameField>
        <label>関係構築lv名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>