force-app/main/default/objects/RelationBuildlv__c/fields/contactID__c.field-meta.xml
<CustomField>
    <fullName>contactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CS_数珠繋ぎキーマン_関係構築度</relationshipLabel>
    <relationshipName>CScontact_r3b</relationshipName>
    <type>Lookup</type>
</CustomField>