force-app/main/default/objects/RelationBuildlv__c/fields/CWKeyPersonNm_Lv__c.field-meta.xml
<CustomField>
    <fullName>CWKeyPersonNm_Lv__c</fullName>
    <label>関係構築度（Lv）</label>
    <length>5</length>
    <type>Text</type>
</CustomField>