force-app/main/default/objects/RelationBuildlv__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>実行日</label>
    <type>Date</type>
</CustomField>